HW18 : Fixed "View Prototype" button on Mobile

--- a/css/style.css
+++ b/css/style.css
@@ -270,4 +270,6 @@ MEDIA QUERIES
 	h1#header-logo {display: none;}
 	nav {width: 100%;}
 	.hero .tagline {font-size: 16px}
+	.btn-right a.icon-button {margin: 0; padding: 0 20px;}
+	.btn-icon-img {display: none;}
 }
